// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminAnalytics /> should render correctly - index 1`] = `
<div>
  <div
    class="sc-iqcoie fvEXqf"
  >
    <h1
      class="sc-gsnTZi cTWewb sc-breuTD kCJHVK"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="sc-fnykZs kIjAem"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-iBkjds kXOvCG"
        href="/login"
      >
        Got a different admin account? Log in here.
      </a>
    </span>
  </div>
</div>
`;

exports[`<AdminAnalytics /> should render correctly with admin user 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin analytics
    </h1>
  </div>
  <div>
    <button
      class="sc-cxabCf hEsGqB admin-analyticsstyles__Control-sc-gt0i0n-2 dQsEUV"
      type="button"
    >
      <span
        class="sc-iIPllB hSPATc"
      >
        Reload analytics
      </span>
    </button>
    <button
      class="sc-cxabCf hEsGqB admin-analyticsstyles__Control-sc-gt0i0n-2 dQsEUV"
      type="button"
    >
      <span
        class="sc-iIPllB hSPATc"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="admin-analyticsstyles__CardContainer-sc-gt0i0n-0 cbOtJG"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with analytics 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin analytics
    </h1>
  </div>
  <div>
    <button
      class="sc-cxabCf hEsGqB admin-analyticsstyles__Control-sc-gt0i0n-2 dQsEUV"
      type="button"
    >
      <span
        class="sc-iIPllB hSPATc"
      >
        Reload analytics
      </span>
    </button>
    <button
      class="sc-cxabCf hEsGqB admin-analyticsstyles__Control-sc-gt0i0n-2 dQsEUV"
      type="button"
    >
      <span
        class="sc-iIPllB hSPATc"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="admin-analyticsstyles__CardContainer-sc-gt0i0n-0 cbOtJG"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with initial state 1`] = `
<div>
  <div
    class="sc-iqcoie fvEXqf"
  >
    <h1
      class="sc-gsnTZi cTWewb sc-breuTD kCJHVK"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="sc-fnykZs kIjAem"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-iBkjds kXOvCG"
        href="/login"
      >
        Got a different admin account? Log in here.
      </a>
    </span>
  </div>
</div>
`;

exports[`<AdminAnalytics /> should render correctly with loadError 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-fEOsli lgueII page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksZaOG duCsur"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG fJrBYQ"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG fJrBYQ"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG fJrBYQ"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG fJrBYQ"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
  </div>
  <div
    class="sc-iqcoie fvEXqf"
  >
    <h1
      class="sc-dkzDqf ddFalQ sc-breuTD sbvki"
      id="this-is-taking-a-while.-maybe-something-isn't-quite-right..."
    >
      This is taking a while. Maybe something isn't quite right...
    </h1>
  </div>
</div>
`;

exports[`<AdminAnalytics /> should render correctly with loading=true 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin analytics
    </h1>
  </div>
  <div>
    <button
      class="sc-cxabCf bFGhkd admin-analyticsstyles__Control-sc-gt0i0n-2 dQsEUV"
      disabled=""
      type="button"
    >
      <span
        class="sc-iIPllB bdtRHT"
      >
        Reload analytics
      </span>
      <div
        aria-hidden="true"
        class="sc-gicCDI eRZrWe"
      >
        <div
          class="sc-bBrHrO eSUDOM"
        >
          <div
            class="sc-ivTmOn cCUzfX"
          />
          <div
            class="sc-ivTmOn bMTdNz"
          />
          <div
            class="sc-ivTmOn buftkI"
          />
          <div
            class="sc-ivTmOn fkyCHB"
          />
          <div
            class="sc-ivTmOn kfQUMy"
          />
          <div
            class="sc-ivTmOn XMyfz"
          />
          <div
            class="sc-ivTmOn dVnQZr"
          />
          <div
            class="sc-ivTmOn greuZD"
          />
        </div>
      </div>
    </button>
    <button
      class="sc-cxabCf hEsGqB admin-analyticsstyles__Control-sc-gt0i0n-2 dQsEUV"
      type="button"
    >
      <span
        class="sc-iIPllB hSPATc"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="admin-analyticsstyles__CardContainer-sc-gt0i0n-0 cbOtJG"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-iqcoie fvEXqf"
  >
    <h1
      class="sc-gsnTZi cTWewb sc-breuTD kCJHVK"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="sc-fnykZs kIjAem"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-iBkjds kXOvCG"
        href="/login"
      >
        Got a different admin account? Log in here.
      </a>
    </span>
  </div>
</div>
`;
